--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-github"></ion-icon></a>
                         
                     </div>
 
