--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                         <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-google"></ion-icon></a>
                         <a href="#"><ion-icon name="logo-github"></ion-icon></a>
+                        <a href="#"><ion-icon name="logo-chrome"></ion-icon></a>
                         
                     </div>
 
